[gd_scene load_steps=5 format=3 uid="uid://h3sptbpih1mg"]

[ext_resource type="Script" path="res://scripts/entities/Bullet.gd" id="1_0h4w3"]
[ext_resource type="Texture2D" uid="uid://cwexxvwhbber" path="res://assets/bullet.png" id="2_hlxh3"]
[ext_resource type="Script" path="res://scripts/combat/hurtbox.gd" id="3_qpt7g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y58xq"]
size = Vector2(12.1958, 11.2567)

[node name="Bullet" type="Area2D"]
collision_layer = 8
collision_mask = 6
script = ExtResource("1_0h4w3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.655962, 0.710689)
shape = SubResource("RectangleShape2D_y58xq")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.66, 0.66)
texture = ExtResource("2_hlxh3")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Hurtbox" type="Area2D" parent="."]
script = ExtResource("3_qpt7g")

[node name="Hurtbox2" type="Area2D" parent="."]
script = ExtResource("3_qpt7g")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_entered" from="." to="Hurtbox" method="_on_area_entered"]
[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="damage_dealt" from="Hurtbox" to="." method="deal_damage"]
[connection signal="damage_dealt" from="Hurtbox2" to="." method="deal_damage"]
